--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -166,7 +166,7 @@ li>a * {
 	background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
 	background-color:#dfdfdf;
-
+	
 }
 
 h1 {
@@ -190,4 +190,9 @@ h2 {
     bottom: 0px;
     left: 0px;
     right: 0px;
+}
+
+li>a.tappable-active {
+    color: #fff;
+    background-color: #4286f5;
 }
